--- a/cscript.tests/CMakeLists.txt
+++ b/cscript.tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(HDRS
 map_tests.h
+parser_tests.h
 pool_tests.h
 stream_tests.h
 string_tests.h
@@ -10,6 +11,7 @@ vector_tests.h
 	
 set(SRCS
 map_tests.c
+parser_tests.c
 pool_tests.c
 stream_tests.c
 string_tests.c
